--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zendframework/zend-text",
-    "description": " ",
+    "description": "Zend\\Text component",
     "license": "BSD-3-Clause",
     "keywords": [
         "zf2",
@@ -9,11 +9,11 @@
     "homepage": "https://github.com/zendframework/zend-text",
     "autoload": {
         "psr-4": {
-            "Zend\\Text": "src/"
+            "Zend\\Text\\": "src/"
         }
     },
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=5.3.23",
         "zendframework/zend-stdlib": "self.version",
         "zendframework/zend-servicemanager": "self.version"
     },
@@ -23,14 +23,14 @@
             "dev-develop": "2.5-dev"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "ZendTest\\Text\\": "test/"
-        }
-    },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
         "satooshi/php-coveralls": "dev-master",
         "phpunit/PHPUnit": "~4.0"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "ZendTest\\Text\\": "test/"
+        }
     }
 }
